--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/js": "15.6.3",
+    "@nrwl/linter": "15.6.3",
     "@nrwl/workspace": "15.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
