--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@repro/consumer": ["packages/consumer/src/index.ts"],
+      "@repro/transformer": ["packages/transformer/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
