--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.5.0"
+  },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "15.6.3",
     "@nrwl/js": "15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/workspace": "15.6.3",
+    "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
